# solar-thermal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: dataset.example.yaml  dataset.yaml  default.yaml
docs/: LABEL_STUDIO_GUIDE.md  active_training.md  dataset_labeling.md  dataset_preparation.md  datasets.md  errors.md  solar_panel_detection.md  solar_thermal_ai.md  yolo11n_solar_training_guide.md
scripts/: bootstrap_yolo_dataset.py  generate_sample_data.py  run_active_training.py  run_auto_label.py  run_auto_label_verification.py  run_inference.py  run_training.py  run_verification.py  train_yolo.py
src/solar_thermal/: __init__.py  config.py  schemas.py
src/solar_thermal/api/: app.py  main.py
src/solar_thermal/cloud/: __init__.py  storage.py
src/solar_thermal/dataset/: advanced_utils.py  auto_label.py  dataset_report.py  run_pipeline.py  split_dataset.py  visualize_labels.py  vlm_verify.py
src/solar_thermal/detection/: __init__.py  exif_extractor.py  hotspot.py  solar_panel_classical.py  solar_panel_sam_clip.py  solar_panel_yolo.py  yolo_detector.py
src/solar_thermal/fusion/: __init__.py  analyzer.py
src/solar_thermal/labeling/: README.md  active_learning.py  hierarchical_cleanup.py  pv_detector.py  pv_pipeline.py  sahi_inference.py
src/solar_thermal/pipeline/: __init__.py  pipeline.py
src/solar_thermal/preprocessing/: __init__.py  loader.py  registration.py  thermal.py
src/solar_thermal/vlm/: __init__.py  client.py  (+1 more)
tests/: test_extractor.py  test_pipeline.py  test_solar_panel_detection.py
(+1 files in other folders)
